# Linux_Code_Test

./: .gitignore  README.md
Samples_AWK/: a.cpp  b.cpp  functions.awk  marks.awk  marks.sh  marks.txt  test.awk  test.cpp
Samples_C/weak_and_strong_symbol/: build.sh  main.c
Samples_C/wrap_symbol/: CMakeLists.txt  build.sh  build_gcc.sh  test_wrap_symbol.cpp  wrap_symbol.cpp  wrap_symbol.hpp
Samples_CMake/MFC/MFCApplication1/: .gitignore  CMakeLists.txt  README.md  build.sh
Samples_CMake/MFC/MFCApplication1/src/: MFCApplication1.cpp  MFCApplication1.rc  MFCApplication1Dlg.cpp
Samples_CMake/complex_usage/: CMakeLists.txt  ReadMe.txt  build.sh  make_api.sh
Samples_CMake/complex_usage/add_sub/: CMakeLists.txt
Samples_CMake/complex_usage/add_sub/add/: CMakeLists.txt
Samples_CMake/complex_usage/add_sub/add/src/: addOper.cpp  addOper.h
Samples_CMake/complex_usage/add_sub/sub/: CMakeLists.txt
Samples_CMake/complex_usage/add_sub/sub/src/: subOper.cpp  subOper.h
Samples_CMake/complex_usage/api/: CMakeLists.txt
Samples_CMake/complex_usage/api/include/: mathOper.h
Samples_CMake/complex_usage/api/sdk/: CMakeLists.txt  mathOper.cpp
Samples_CMake/complex_usage/api/test/: CMakeLists.txt  demo.cpp
Samples_CMake/complex_usage/mul_div/: CMakeLists.txt
Samples_CMake/complex_usage/mul_div/div/: CMakeLists.txt
Samples_CMake/complex_usage/mul_div/mul/: CMakeLists.txt
Samples_CMake/messy_usage/: CMakeLists.txt  build.sh  test_add_compile_options.cmake  test_add_custom_command.cmake  test_add_custom_target.cmake  test_add_definitions.cmake  test_add_executable.cmake  test_add_library.cmake  test_add_subdirectory.cmake  test_aux_source_directory.cmake  test_cmake_host_system_information.cmake  test_cmake_minimum_required.cmake  test_cmake_parse_arguments.cmake  test_cmake_policy.cmake  test_configure_file.cmake  test_define_property.cmake  test_file.cmake  test_find_file.cmake  test_find_library.cmake  test_find_package.cmake  test_find_path.cmake  test_find_program.cmake  test_foreach.cmake  test_function.cmake  test_if.cmake  test_include.cmake  test_include_directories.cmake  test_install.cmake  test_link_directories.cmake  test_link_libraries.cmake  test_list.cmake  test_macro.cmake  test_math.cmake  test_message.cmake  test_option.cmake  test_project.cmake  test_return.cmake  test_set.cmake  test_set_property.cmake  test_set_target_properties.cmake  (+8 more)
Samples_CMake/messy_usage/include/: add.hpp  foo.h.in  multipy.hpp  subtraction.hpp
Samples_CMake/messy_usage/samples/: sample_add.cpp  sample_multipy.cpp  sample_subtraction.cpp
Samples_CMake/messy_usage/source/: CMakeLists.txt  add.cpp  multipy.cpp  subtraction.cpp
Samples_CMake/multi_executable_file/: CMakeLists.txt  sample_opengl.cpp
Samples_CMake/special_usage/: CMakeLists.txt  build_android.sh  build_linux.sh
Samples_CMake/special_usage/toolchain/: android.cmake  linux.cmake
Samples_Conan/: CMakeLists.txt  conanfile.txt  main.cpp
Samples_Cplusplus/: build.sh  run_getopt.sh  run_getopt_long.sh  sample_attribute_aligned.cpp  sample_getopt.cpp  sample_getopt_long.cpp  sample_memory_alignment.cpp
Samples_Dynamic_Library/: CMakeLists.txt  ReadMe.txt
Samples_Dynamic_Library/Dynamic_Library/: library.cpp  library.hpp
Samples_Dynamic_Library/Test_Dynamic_Library/: main.cpp  test_library.cpp  test_library.hpp
Samples_Hook/ld_preload/: build.sh  hook.cpp  test.cpp
Samples_Hook/malloc_hook/: build.sh  test.cpp
Samples_Hook/wrap/: build.sh  foo.cpp  test.cpp
Samples_Make/complex_usage/: ReadMe.txt  makefile
Samples_Make/complex_usage/include/: add.h  divide.h  hybrid.h  multiply.h  subtract.h
Samples_Make/complex_usage/project_makefile/: makefile
Samples_Make/complex_usage/src/: add.c  divide.cpp  hybrid.cpp  multiply.cpp  subtract.c
Samples_Make/complex_usage/test/: test_makefile_gcc.cpp
Samples_Make/simple_usage/: makefile1  makefile2  makefile3  makefile4  makefile5  makefile6  makefile7
Samples_Multi_process/: CMakeLists.txt  Makefile  build.sh  test_fork1.cpp  test_fork2.cpp  test_fork3.cpp  test_fork4.cpp  test_named_pipe_1.cpp  test_pipe1.cpp  test_pipe2.cpp  test_pipe3.cpp  test_pipe4.cpp  test_pipe5.cpp  test_shared_memory_1.cpp  test_signal1.cpp  test_signal2.cpp  test_signal3.cpp  test_signal4.cpp  test_signal5.cpp  test_unix_domain_socket_1.cpp
Samples_Multi_thread/: CMakeLists.txt  README.md  test_create_thread.cpp  test_thread_bind_to_cpu_core.cpp  test_thread_cond.cpp  test_thread_cond1.cpp  test_thread_cond2.cpp  test_thread_mutex.cpp  test_thread_sem.cpp  test_thread_sem1.cpp  test_thread_sem2.cpp  test_thread_sem3.cpp
Samples_STL_Implementation/: CMakeLists.txt  build.sh
Samples_STL_Implementation/src/: pair.hpp  string.hpp  vector.hpp
Samples_STL_Implementation/test/: test_pair.cpp  test_string.cpp  test_vector.cpp
Samples_Shell/: analysis_log_file_delete_lines.sh  analysis_log_file_extract_lines.sh  array_usage.sh  detect_operating_system.sh  echo_output_color.sh  echo_printf_usage.sh  file.txt  function_usage.sh  if_for_while_case_usage.sh  input_output_redirection_usage.sh  operator_usage.sh  parameter_usage.sh  read_directory_analysis.sh  read_txt_file_analysis.sh  replace_a_string_with_another_string_in_all_files.sh  replace_string_in_all_files.sh  special_usage.sh  string_usage.sh  test_call_other_shell.sh  test_getopts.sh  test_shell1.sh  test_shell10.sh  test_shell11.sh  test_shell2.sh  test_shell3.sh  test_shell4.sh  test_shell5.sh  test_shell6.sh  test_shell7.sh  test_shell8.sh  test_shell9.sh  variable_usage.sh
Samples_Socket/: ReadMe.txt  test_client1.cpp  test_client2.cpp  test_client3.cpp  test_client4.cpp  test_client5_tcp.cpp  test_client5_udp.cpp  test_client6.cpp  test_client7.cpp  test_client8.cpp  test_server1.cpp  test_server2.cpp  test_server3.cpp  test_server4.cpp  test_server5_tcp.cpp  test_server5_udp.cpp  test_server6.cpp  test_server7.cpp  test_server8.cpp
Samples_c/weak_and_strong_symbol/: main.c
Samples_cplusplus/: CMakeLists.txt  build.sh  sample_get_run_time.cpp  sample_traverse_directory.cpp
(+4 files in other folders)
