PROJECT(test_wrap_symbol)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

# 支持C++11
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O2 -std=c11")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -g -Wall -O2 -std=c++11")

MESSAGE(STATUS "source dir: ${CMAKE_CURRENT_SOURCE_DIR}")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB TEST_CPP_LIST ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
MESSAGE(STATUS "cpp files: ${TEST_CPP_LIST}")
FILE(GLOB TEST_C_LIST ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

SET(LINK_FLAGS
	-Wl,--wrap=malloc
	-Wl,--wrap=free
)

ADD_EXECUTABLE(test_wrap_symbol ${TEST_CPP_LIST} ${TEST_C_LIST})
#TARGET_LINK_LIBRARIES(test_wrap_symbol pthread)

ADD_CUSTOM_COMMAND(
	TARGET test_wrap_symbol
	COMMAND /usr/bin/ld ${LINK_FLAGS}
)

