AUX_SOURCE_DIRECTORY(. TEST_SRC_LIST)

INCLUDE_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/include)

ADD_EXECUTABLE(test ${TEST_SRC_LIST})

MESSAGE(STATUS "test install dir: ${CMAKE_INSTALL_PREFIX}")
SET(DEP_LIB ${CMAKE_INSTALL_PREFIX}/lib/libmathsdk.so)

TARGET_LINK_LIBRARIES(test ${DEP_LIB})

INSTALL(TARGETS test
	DESTINATION bin
	)
